--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
 body {
-    background-image: url(./assets/img/HEK_2024.jpg);
-    background-color: hsl(0, 0%, 80%);
-    background-size: cover;
+    background-color: #222222 !important;
 }
